kyy-k8s-config/src/staging/backend/go-api-client/api-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-client
  name: api-client
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: api-client
