kyy-k8s-config/src/staging/backend/go-api-client/api-client-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: api-client
  name: api-client
spec:
  rules:
    - host: api.kaoyaya.com
      http:
        paths:
          - backend:
              serviceName: api-client
              servicePort: 80
